@@ -1,3 +1,9 @@
+globus-gridftp-server (12.6-1+gt6.@distro@) @distro@; urgency=low
+
+  * win: fix path restrictions on /
+
+ -- Globus Toolkit <support@globus.org>  Fri, 15 Jun 2018 15:27:56 -0500
+
 globus-gridftp-server (12.5-1+gt6.@distro@) @distro@; urgency=low
 
   * win32 fix
